// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dates filters search should request all unpublished entities or documents for the user 1`] = `
Object {
  "range": Object {
    "metadata.date": Object {
      "gte": "timestamp!",
      "lte": "timestamp!",
    },
  },
}
`;

exports[`dates filters search should request all unpublished entities or documents for the user 2`] = `
Object {
  "range": Object {
    "metadata.multidate": Object {
      "gte": "timestamp!",
      "lte": "timestamp!",
    },
  },
}
`;

exports[`dates filters search should request all unpublished entities or documents for the user 3`] = `
Object {
  "nested": Object {
    "path": "metadata.daterange",
    "query": Object {
      "bool": Object {
        "should": Array [
          Object {
            "range": Object {
              "metadata.daterange.from": Object {
                "gte": "timestamp!",
                "lte": "timestamp!",
              },
            },
          },
          Object {
            "range": Object {
              "metadata.daterange.to": Object {
                "gte": "timestamp!",
                "lte": "timestamp!",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`dates filters search should request all unpublished entities or documents for the user 4`] = `
Object {
  "nested": Object {
    "path": "metadata.multidaterange",
    "query": Object {
      "bool": Object {
        "should": Array [
          Object {
            "range": Object {
              "metadata.multidaterange.from": Object {
                "gte": "timestamp!",
                "lte": "timestamp!",
              },
            },
          },
          Object {
            "range": Object {
              "metadata.multidaterange.to": Object {
                "gte": "timestamp!",
                "lte": "timestamp!",
              },
            },
          },
        ],
      },
    },
  },
}
`;
